force-app/main/default/objects/PDRI__Deployment_Bundle_Work_Item_Tracking__c/PDRI__Deployment_Bundle_Work_Item_Tracking__c.object-meta.xml
<CustomObject>
    <label>Deployment Bundle Work Item Tracking</label>
    <nameField>
        <displayFormat>DB-WIT-{00000}</displayFormat>
        <label>Deployment Bundle Work Item Tracking Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Bundle Work Item Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>