force-app/main/default/objects/PDRI__Deployment_Bundle_Work_Item_Tracking__c/fields/PDRI__Deployment_Bundle__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment_Bundle__c</fullName>
    <label>Deployment Bundle</label>
    <referenceTo>PDRI__Deployment_Bundle__c</referenceTo>
    <relationshipLabel>Deployment Bundle Work Item Trackings</relationshipLabel>
    <relationshipName>Deployment_Bundle_Work_Item_Trackings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>