force-app/main/default/objects/PDRI__Deployment_Bundle_Work_Item_Tracking__c/fields/PDRI__Description__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>