force-app/main/default/objects/PDRI__Deployment_Bundle_Work_Item_Tracking__c/fields/PDRI__Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>