force-app/main/default/objects/PDRI__Deployment_Bundle_Work_Item_Tracking__c/fields/PDRI__Work_Item_Key__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Work_Item_Key__c</fullName>
    <label>Work Item Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>